[project]
name = "py311tf"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    {name = "dMario24", email = "data.mario24@gmail.com"},
]
dependencies = [
    "fastapi>=0.114.1",
    "python-multipart>=0.0.9",
    "PyMySQL>=1.1.1",
    "jigeum>=1.0.0",
    "uvicorn[standard]>=0.30.6",
    "requests>=2.32.3",
    "pytz>=2024.2",
    "pillow>=10.4.0",
    "python-multipart>=0.0.9",
    "tensorflow>=2.17.0",
    "keras>=3.5.0",
    "matplotlib>=3.9.2",
    "scikit-learn>=1.5.2",
    "scikit-image>=0.24.0",
    "opencv-python>=4.10.0.84",
    "pydot>=3.0.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "GNU"}


[tool.pdm]
distribution = false
